[package]
name = "ligate-prover-guest-celestia-risc0"
description = "Risc0 zkVM guest re-running the Ligate Chain STF for proof generation"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
publish = false
resolver = "2"

# Own workspace so risc0-flavoured patches don't leak into the
# parent. The guest compiles to a RISC-V ELF; the rest of our
# crates compile for the host. Different toolchains, different
# patch sets.
[workspace]

[dependencies]
risc0-zkvm          = { workspace = true, features = ["std"] }
risc0-zkvm-platform = { workspace = true, features = ["sys-getenv", "heap-embedded-alloc"] }
sov-risc0-adapter    = { workspace = true }
sov-rollup-interface = { workspace = true }
sov-celestia-adapter = { workspace = true }
sov-modules-api      = { workspace = true }
sov-modules-stf-blueprint = { workspace = true }
sov-state    = { workspace = true }
sov-mock-zkvm = { workspace = true }
sov-address  = { workspace = true, features = ["evm"] }
sha2 = { version = "0.10", default-features = false }

ligate-stf-declaration = { path = "../../../../stf-declaration" }
ligate-stf             = { path = "../../../../stf" }

[patch.crates-io]
# Risc0-flavoured forks of crates the guest uses. These accelerate
# inside the zkVM via syscalls; the host-side equivalents stay
# vanilla because they're outside this guest's `[workspace]`.
sha2          = { git = "https://github.com/risc0/RustCrypto-hashes",   package = "sha2",          tag = "sha2-v0.10.9-risczero.0" }
sha2-v0-9-9   = { git = "https://github.com/risc0/RustCrypto-hashes",   package = "sha2",          tag = "sha2-v0.9.9-risczero.0" }
ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek",                                tag = "curve25519-4.1.3-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", package = "crypto-bigint", tag = "v0.5.5-risczero.0" }

# Risc0 guests need optimisation even in dev: the compiled ELF is
# loaded by the prover at runtime, and unoptimised guests blow up
# proof time.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto   = true

[profile.release.build-override]
opt-level = 3

[features]
bench = [
    "sov-modules-api/bench",
    "sov-state/bench",
    "sov-modules-stf-blueprint/bench",
    "sov-risc0-adapter/bench",
    "sov-celestia-adapter/bench",
]
bincode = ["sov-risc0-adapter/bincode"]
